cluster/system/traefik/templates/middleware-local-network.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-network-only
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/24
      - fd00:2222::/64
