cluster/system/traefik/templates/adguard.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.240
    ports:
      - name: http
        port: 80
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: default
  annotations:
    gethomepage.dev/href: "https://adguard.internal.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: AdGuard
    gethomepage.dev/group: Internal
    gethomepage.dev/icon: adguard-home.png
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`adguard.internal.rwcloud.org`)
      middlewares:
        - name: oauth2-auth
          namespace: oauth2-proxy
      services:
        - name: adguard-service
          port: 80
          scheme: http
  tls:
    secretName: adguard-tls
