cluster/system/traefik/templates/backrest.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: backrest-service
  namespace: default
spec:
  ports:
    - name: http
      port: 9898
      targetPort: 9898
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: backrest-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.3
    ports:
      - name: http
        port: 9898
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backrest
  namespace: default
  annotations:
    gethomepage.dev/href: "https://backrest.internal.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Backrest
    gethomepage.dev/group: Internal
    gethomepage.dev/icon: backrest.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`backrest.internal.rwcloud.org`)
      middlewares:
        - name: local-network-only
          namespace: traefik
        - name: oauth2-auth
          namespace: oauth2-proxy
      services:
        - name: backrest-service
          port: 9898
          scheme: http
  tls:
    secretName: backrest-tls
