cluster/system/traefik/templates/diskstation.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: diskstation-service
  namespace: default
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: diskstation-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.3
    ports:
      - name: http
        port: 5000
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: diskstation
  namespace: default
  annotations:
    gethomepage.dev/href: "https://ds.ronnywalter.de"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Diskstation
    gethomepage.dev/group: System
    gethomepage.dev/icon: synology.png
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ds.ronnywalter.de`)
      services:
        - name: diskstation-service
          port: 5000
          scheme: http
  tls:
    secretName: ds-tls
