cluster/system/traefik/templates/gigablue.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: gigablue-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: gigablue-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.86
    ports:
      - name: http
        port: 80
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gigablue
  namespace: default
  annotations:
    gethomepage.dev/href: "https://gigablue.internal.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Gigablue Receiver
    gethomepage.dev/group: Internal
    gethomepage.dev/icon: https://www.pngkey.com/png/detail/752-7528103_gigablue-logo-icon-pax.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gigablue.internal.rwcloud.org`)
      middlewares:
        - name: local-network-only
          namespace: traefik
        - name: oauth2-auth
          namespace: oauth2-proxy
      services:
        - name: gigablue-service
          port: 80
          scheme: http
  tls:
    secretName: gigablue-tls
