cluster/system/traefik/templates/haproxy.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  namespace: default
spec:
  ports:
    - name: http
      port: 8404
      targetPort: 8404
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: haproxy-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.225
    ports:
      - name: http
        port: 8404
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: haproxy
  namespace: default
  annotations:
    gethomepage.dev/href: "https://haproxy.internal.rwcloud.org/stats"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: HAProxy
    gethomepage.dev/group: System
    gethomepage.dev/icon: haproxy.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`haproxy.internal.rwcloud.org`) && PathPrefix(`/stats`)
      middlewares:
        - name: oauth2-auth
          namespace: oauth2-proxy
      services:
        - name: haproxy-service
          port: 8404
          scheme: http
  tls:
    secretName: haproxy-tls
