cluster/system/traefik/templates/komodo.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: komodo-service
  namespace: default
spec:
  ports:
    - name: http
      port: 9120
      targetPort: 9120
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: komodo-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.125
    ports:
      - name: http
        port: 9120
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: komodo
  namespace: default
  annotations:
    gethomepage.dev/href: "https://komodo.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: komodo
    gethomepage.dev/group: System
    gethomepage.dev/icon: forgejo.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`komodo.rwcloud.org`)
      services:
        - name: komodo-service
          port: 9120
          scheme: http
  tls:
    secretName: komodo-tls
