cluster/system/traefik/templates/nextcloud.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: default
spec:
  ports:
    - name: http
      port: 11000
      targetPort: 11000
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.142
    ports:
      - name: http
        port: 11000
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: default
  annotations:
    gethomepage.dev/href: "https://cloud.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: terra
    gethomepage.dev/group: System
    gethomepage.dev/icon: nextcloud.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.rwcloud.org`)
      services:
        - name: nextcloud-service
          port: 11000
          scheme: http
          serversTransport: nextcloud-transport
  tls:
    secretName: nextcloud-tls
