cluster/system/traefik/templates/openwebui.yaml
###############################################################################
# Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  namespace: default
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
###############################################################################
# Endpoints (statt EndpointSlice!)
###############################################################################
apiVersion: v1
kind: Endpoints
metadata:
  name: openwebui-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.126
    ports:
      - name: http
        port: 3000
---
###############################################################################
# IngressRoute
###############################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: default
  annotations:
    gethomepage.dev/href: "https://ai.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: openwebui
    gethomepage.dev/group: System
    gethomepage.dev/icon: synology.png
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ai.rwcloud.org`)
      services:
        - name: openwebui-service
          port: 3000
          scheme: http
  tls:
    secretName: ow-tls
