cluster/system/traefik/templates/traefik-dashboard.yaml
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: oauth2-auth
# spec:
#   forwardAuth:
#     address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/
#     trustForwardHeader: true
#     authResponseHeaders:
#       - X-Auth-Request-User
#       - X-Auth-Request-Email
#       - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://traefik.internal.rwcloud.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Traefik Dashboard
    gethomepage.dev/group: Internal
    gethomepage.dev/icon: traefik.png
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.internal.rwcloud.org`)
      priority: 10
      middlewares:
        - name: oauth2-auth          
          namespace: oauth2-proxy
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
